--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <h1>Zufallsname Generator</h1>
     <form id="nameForm">
-        <label><input type="checkbox" name="name" value="Name1"> Name1</label><br>
-        <label><input type="checkbox" name="name" value="Name2"> Name2</label><br>
-        <label><input type="checkbox" name="name" value="Name3"> Name3</label><br>
-        <label><input type="checkbox" name="name" value="Name4"> Name4</label><br>
-        <label><input type="checkbox" name="name" value="Name5"> Name5</label><br>
+        <label class="nameOption"><input type="checkbox" name="name" value="Name1"> Name1</label><br>
+        <label class="nameOption"><input type="checkbox" name="name" value="Name2"> Name2</label><br>
+        <label class="nameOption"><input type="checkbox" name="name" value="Name3"> Name3</label><br>
+        <label class="nameOption"><input type="checkbox" name="name" value="Name4"> Name4</label><br>
+        <label class="nameOption"><input type="checkbox" name="name" value="Name5"> Name5</label><br>
         <button type="button" id="startButton">Start</button>
     </form>
-    <div id="animationContainer"></div>
+    <div id="animationContainer" class="nameOption"></div>
     <audio id="soundEffect" src="sound.mp3"></audio>
     <script src="script.js"></script>
 </body>
