--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <label class="nameOption"><input type="checkbox" name="name" value="Name4"> Name4</label><br>
         <label class="nameOption"><input type="checkbox" name="name" value="Name5"> Name5</label><br>
         <button type="button" id="startButton">Start</button>
+        <button type="button" id="resetButton" class="resetButton">&#8634;</button>
     </form>
     <div id="animationContainer" class="nameOption"></div>
     <audio id="soundEffect" src="sound.mp3"></audio>
