--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         </div>
         <div id="animationBox" class="box">
             <div id="animationContainer" class="nameOption"></div>
+            <div id="buttonContainer">
+                <button type="button" id="startButtonBottom" class="bottomButton">Start</button>
+                <button type="button" id="resetButtonBottom" class="bottomButton">&#10226;</button>
+            </div>
         </div>
     </div>
     <audio id="soundEffect" src="sound.mp3"></audio>
