--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zufallsname Generator</title>
+    <title>Protokoll</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Zufallsname Generator</h1>
+        <h1>Protokoll</h1>
         <div id="nameSelection">
             <form id="nameForm">
-                <label class="nameOption"><input type="checkbox" name="name" value="Name1"> Name1</label><br>
-                <label class="nameOption"><input type="checkbox" name="name" value="Name2"> Name2</label><br>
-                <label class="nameOption"><input type="checkbox" name="name" value="Name3"> Name3</label><br>
-                <label class="nameOption"><input type="checkbox" name="name" value="Name4"> Name4</label><br>
-                <label class="nameOption"><input type="checkbox" name="name" value="Name5"> Name5</label><br>
-                <button type="button" id="startButton">Start</button>
-                <button type="button" id="resetButton" class="resetButton">&#10226;</button>
+                <label class="nameOption"><input type="checkbox" name="name" value="Julia"> Julia</label><br>
+                <label class="nameOption"><input type="checkbox" name="name" value="Kerstin"> Kerstin</label><br>
+                <label class="nameOption"><input type="checkbox" name="name" value="Raik"> Raik</label><br>
+                <label class="nameOption"><input type="checkbox" name="name" value="Steffen"> Steffen</label><br>
+                <label class="nameOption"><input type="checkbox" name="name" value="Thomas"> Thomas</label><br>
+                <button type="button" id="startButton" class="topButton">Start</button>
+                <button type="button" id="resetButton" class="topButton">&#10226;</button>
             </form>
         </div>
         <div id="animationBox" class="box">
