--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
                 <label class="nameOption"><input type="checkbox" name="name" value="Raik"> Raik</label><br>
                 <label class="nameOption"><input type="checkbox" name="name" value="Steffen"> Steffen</label><br>
                 <label class="nameOption"><input type="checkbox" name="name" value="Thomas"> Thomas</label><br>
-                <button type="button" id="startButton" class="topButton">Start</button>
-                <button type="button" id="resetButton" class="topButton">&#10226;</button>
             </form>
         </div>
         <div id="animationBox" class="box">
             <div id="animationContainer" class="nameOption"></div>
             <div id="buttonContainer">
-                <button type="button" id="startButtonBottom" class="bottomButton">Start</button>
-                <button type="button" id="resetButtonBottom" class="bottomButton">&#10226;</button>
+                <button type="button" id="startButton" class="bottomButton">Start</button>
+                <button type="button" id="resetButton" class="bottomButton">&#10226;</button>
             </div>
         </div>
     </div>
