--- a/index.html
+++ b/index.html
@@ -3,29 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Protokoll</title>
+    <title>Zufallsname Generator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Protokoll</h1>
-        <div id="nameSelection">
-            <form id="nameForm">
-                <label class="nameOption"><input type="checkbox" name="name" value="Julia"> Julia</label><br>
-                <label class="nameOption"><input type="checkbox" name="name" value="Kerstin"> Kerstin</label><br>
-                <label class="nameOption"><input type="checkbox" name="name" value="Raik"> Raik</label><br>
-                <label class="nameOption"><input type="checkbox" name="name" value="Steffen"> Steffen</label><br>
-                <label class="nameOption"><input type="checkbox" name="name" value="Thomas"> Thomas</label><br>
-            </form>
-        </div>
-        <div id="animationBox" class="box">
-            <div id="animationContainer" class="nameOption"></div>
-            <div id="buttonContainer">
-                <button type="button" id="startButton" class="bottomButton">Start</button>
-                <button type="button" id="resetButton" class="bottomButton">&#10226;</button>
-            </div>
-        </div>
-    </div>
+    <h1>Zufallsname Generator</h1>
+    <form id="nameForm">
+        <label class="nameOption"><input type="checkbox" name="name" value="Name1"> Name1</label><br>
+        <label class="nameOption"><input type="checkbox" name="name" value="Name2"> Name2</label><br>
+        <label class="nameOption"><input type="checkbox" name="name" value="Name3"> Name3</label><br>
+        <label class="nameOption"><input type="checkbox" name="name" value="Name4"> Name4</label><br>
+        <label class="nameOption"><input type="checkbox" name="name" value="Name5"> Name5</label><br>
+        <button type="button" id="startButton">Start</button>
+    </form>
+    <div id="animationContainer" class="nameOption"></div>
     <audio id="soundEffect" src="sound.mp3"></audio>
     <script src="script.js"></script>
 </body>
